fix: align date

--- a/wp-content/themes/dna/vue/src/assets/scss/blogSingle.scss
+++ b/wp-content/themes/dna/vue/src/assets/scss/blogSingle.scss
@@ -158,6 +158,7 @@
             @media (min-width: $largeDesktops) {
                 margin: 0;
                 font-size: 13px!important;
+                text-align: right;
             }
             @media (min-width: $fullHdDesktops) {
                 margin: 0;
